--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -313,7 +313,7 @@ table.sml-table {
 .nric-grey {
   display: inline-block;
   vertical-align: middle;
-  background-color: #959396;
+  background-color: #5a5a5a; /* Grey-dk-100 */
   width: 20px;
   height: 20px;
   margin-right: 2px;
