--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -273,7 +273,7 @@ table.sml-table {
 
 .tables-container {
   display: flex;
-  gap: 20px; /* Adjust gap as needed */
+  gap: 20px;
   justify-content: space-between;
 }
 
@@ -706,4 +706,23 @@ table.sml-table {
 .nav-button.no-link.next .nav-item::after {
   content: "Next";
   color: #d3d3d3;
+}
+
+// 0008
+
+.custom-toc #markdown-toc {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+.custom-toc #markdown-toc li {
+  display: inline;
+}
+
+.custom-toc #markdown-toc li:not(:last-child)::after {
+  content: " - ";
+  padding: 0 0.5em;
 }
